k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ez-frame-generator-namespace
  labels:
    name: ez-frame-generator-namespace
