k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ez-video-ingestion-ms-deployment
  namespace: ez-frame-generator-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ez-video-ingestion-ms
  template:
    metadata:
      labels:
        app: ez-video-ingestion-ms
      annotations:
        eks.amazonaws.com/compute-type: fargate
    spec:
      serviceAccountName: frame-generator-sa  #Importante para IRSA
      containers:
      - name: ez-video-ingestion-ms-pod
        image: dasilvathaynara/ez-video-ingestion-ms:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "150Mi"
          limits:
            cpu: "300m"
            memory: "500Mi"

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 3
